Begin implementing parsing for posts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,10 @@ path = "src/main.rs"
 
 git = "https://github.com/nickel-org/nickel"
 
+[dependencies.peg]
+
+git = "https://github.com/kevinmehall/rust-peg"
+
 [dependencies.toml]
 
 git = "https://github.com/alexcrichton/toml-rs"
