--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,8 @@ name = "ferrum"
 path = "src/main.rs"
 
 [dependencies]
-getopts = "0.2.4"
-log = "0.2.5"
-peg = "0.1.9"
-
-[dependencies.rust-mustache]
-git = "https://github.com/nickel-org/rust-mustache"
+env_logger = "0.3"
+getopts = "0.2"
+log = "0.3"
+mustache = "0.7"
+yaml-rust = "0.3"
