--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,14 @@ getopts = "0.2"
 log = "0.3"
 mustache = "0.7"
 yaml-rust = "0.3"
+
+[dependencies.clippy]
+optional = true
+version = "0.0"
+
+[features]
+nightly = []
+nightly-testing = [
+    "clippy",
+    "nightly",
+]
