--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
-name = "ferrum"
-version = "0.0.2"
+name = "ferru"
+version = "0.3.0"
 authors = [ "Nikita Pekin <contact@nikitapek.in>" ]
 
 [dependencies]
